--- a/resources/css/filament/barangay/theme.css
+++ b/resources/css/filament/barangay/theme.css
@@ -9,3 +9,12 @@
 .progress-bar-value {
     @apply flex h-full items-center justify-center bg-primary-600 dark:bg-primary-500 rounded-r-full shadow-inner text-xs font-bold text-white;
 }
+
+
+.fa-main{
+    @apply bg-slate-50 dark:bg-slate-900
+}
+
+.fa-main{
+    @apply bg-slate-50 dark:bg-slate-800
+}
