--- a/resources/css/filament/barangay/theme.css
+++ b/resources/css/filament/barangay/theme.css
@@ -51,11 +51,14 @@
     }
 }
 .fi-sidebar-item .fi-sidebar-item-button .fi-sidebar-item-label  {
-    @apply text-white
+    @apply text-[#93acfd]
 }
 
 .fi-sidebar-item .fi-sidebar-item-button:hover .fi-sidebar-item-label {
-    @apply text-primary-900;
+    /* @apply text-primary-900; */
+}
+.fi-sidebar-item .fi-sidebar-item-button:hover{
+    @apply bg-[#172554];
 }
 
 .fi-sidebar-item-active .fi-sidebar-item-label {
